# tlpi-tasks

./: .gitignore  CMakeLists.txt
chapter4/: tee.c
exercises/: CMakeLists.txt
exercises/chapter4/: CMakeLists.txt  cp_holes.c  tee.c
exercises/chapter5/: CMakeLists.txt  appending.c  atomic_append.c  large_file.c  my_dupes.c  my_dupes.h  v_package.c  v_package.h  writes.c
include/: tlpi_hdr.h
lib/: CMakeLists.txt  ename.c.inc  error_functions.c  error_functions.h
